force-app/main/default/objects/Recent_Item_Regex_Group__c/Recent_Item_Regex_Group__c.object-meta.xml
<CustomObject>
    <label>Recent Item Regex Group</label>
    <nameField>
        <label>Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Item Regex Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>