force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Apply_quantifier__c.field-meta.xml
<CustomField>
    <fullName>Apply_quantifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply quantifier</label>
    <type>Checkbox</type>
</CustomField>