force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Capture_group__c.field-meta.xml
<CustomField>
    <fullName>Capture_group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture group</label>
    <type>Checkbox</type>
</CustomField>