force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Followed_by__c.field-meta.xml
<CustomField>
    <fullName>Followed_by__c</fullName>
    <label>Followed by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>followed by</fullName>
            </value>
            <value>
                <fullName>or</fullName>
            </value>
            <value>
                <fullName>only if followed by</fullName>
            </value>
            <value>
                <fullName>only if not followed by</fullName>
            </value>
            <value>
                <fullName>ending in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>