force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Free_text__c.field-meta.xml
<CustomField>
    <fullName>Free_text__c</fullName>
    <label>Free text</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free text</fullName>
            </value>
            <value>
                <fullName>any character</fullName>
            </value>
            <value>
                <fullName>any letter a-z</fullName>
            </value>
            <value>
                <fullName>any lowercase letter a-z</fullName>
            </value>
            <value>
                <fullName>any uppercase letter A-Z</fullName>
            </value>
            <value>
                <fullName>any digit 0-9</fullName>
            </value>
            <value>
                <fullName>any ASCII word character</fullName>
            </value>
            <value>
                <fullName>any whitespace</fullName>
            </value>
            <value>
                <fullName>any word boundary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>