force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Group_fields__c.field-meta.xml
<CustomField>
    <fullName>Group_fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group fields</label>
    <type>Checkbox</type>
</CustomField>