force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <label>Group Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>