force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Quantifier__c.field-meta.xml
<CustomField>
    <fullName>Quantifier__c</fullName>
    <label>Quantifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>