force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Quantifier_Val_1__c.field-meta.xml
<CustomField>
    <fullName>Quantifier_Val_1__c</fullName>
    <label>Quantifier Val 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>