force-app/main/default/objects/Recent_Item_Regex_Group__c/fields/Recent_Item_Regex__c.field-meta.xml
<CustomField>
    <fullName>Recent_Item_Regex__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recent Item Regex</label>
    <referenceTo>Recent_Item_Regex__c</referenceTo>
    <relationshipName>RecentItemRegexGroups</relationshipName>
    <type>Lookup</type>
</CustomField>